SERVER-77737 Fix incorrect serialization logic of $top/$bottom on constant output and sort